# aenn

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
aenn/nn/: activation.py  dense.py
tests/: test_activation.py  test_dense.py  test_mlp.py
